Update dockerfile & dockerignore

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,22 +1,11 @@
-
-# Python cache
 __pycache__/
 *.pyc
 *.pyo
-
-# Virtual environment
-venv/
-
-# Git repo
-.git/
-.gitignore
-
-# Logs
-*.log
-
-# Local secrets
-.env
-
-# Docker files
-Dockerfile
+*.pyd
+.venv/
+env/
+.venv.bak/
 .dockerignore
+.git
+.env
+.DS_Store
